# tmuxrs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONCEPT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  LICENSE-APACHE  LICENSE-MIT  README.md  compose.yml  fixed_attach_tests.txt  integration_test_commands.txt
.githooks/: pre-commit  setup.sh
.github/workflows/: ci.yml  release.yml
docs/: README.md  ROADMAP.md
docs/design/: 01-feature-decisions.md  02-system-architecture.md
docs/guides/: 01-implementation-guide.md
docs/research/: 01-tmux-internals.md  02-tmuxinator-analysis.md  03-tuxmux-analysis.md  04-dmux-analysis.md  05-comparison-matrix.md
docs/testing/: integration-test-guide.md  troubleshooting.md
examples/: config_discovery.rs  interactive_tmux.rs  tmux_demo.rs
man/: tmuxrs.1
scripts/: cleanup-tmux.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  session.rs  tmux.rs
src/config/: mod.rs
src/session/: mod.rs
tests/: README.md  attach_test.rs  config_test.rs  core_commands_test.rs  create_session_test.rs  create_window_test.rs  environment_inheritance_test.rs  existing_session_with_attach_test.rs  integration.rs  integration_tests.rs  interactive_shell_features_test.rs  layout_test.rs  no_shell_config_test.rs  session_exists_test.rs  shell_command_execution_test.rs  shell_features_in_split_panes_test.rs  shell_initialization_test.rs  shell_interaction_test.rs  shell_state_independence_test.rs  simple_session_test.rs  start_session_with_attach_flag_test.rs  stop_command_test.rs  stop_existing_session_test.rs  tmux_command_execution_test.rs  tmux_test.rs
(+8 files in other folders)
