[package]
name = "tmuxrs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
description = "A modern tmux session manager"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tmuxrs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
