[package]
name = "tmuxrs"
version = "0.1.0"
edition = "2021"
authors = ["shootani <sho.otani@gmail.com>"]
description = "A modern, Rust-based tmux session manager with centralized configuration and directory-aware execution. Drop-in replacement for tmuxinator."
license = "MIT OR Apache-2.0"
repository = "https://github.com/beijaflor/tmuxrs"
homepage = "https://github.com/beijaflor/tmuxrs"
documentation = "https://docs.rs/tmuxrs"
readme = "README.md"
keywords = ["tmux", "session", "manager", "tmuxinator", "terminal"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-*",
    "man/**/*",
]

[[bin]]
name = "tmuxrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
